syntax = "proto3";
package qbtc.qbtc.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "qbtc/qbtc/v1/type_airdrop.proto";

option go_package = "github.com/btcq-org/qbtc/x/qbtc/types";

// MsgClaimAirdrop is the message for claiming an airdrop using a ZK proof.
// The user proves ownership of a Bitcoin address without revealing their private key.
message MsgClaimAirdrop {
  option (cosmos.msg.v1.signer) = "claimer";
  option (amino.name) = "qbtc/MsgClaimAirdrop";

  // The address on the qbtc chain that will receive the airdrop
  string claimer = 1;

  // The Hash160 of the Bitcoin public key being claimed (20 bytes)
  bytes btc_address_hash = 2;

  // The ZK proof proving ownership of the Bitcoin address
  ZKProof proof = 3 [(gogoproto.nullable) = false];
}

// MsgClaimAirdropResponse is the response for a successful airdrop claim.
message MsgClaimAirdropResponse {
  // The amount of tokens claimed
  uint64 amount_claimed = 1;
}
